Fix invisible status bar

--- a/css/window.css
+++ b/css/window.css
@@ -35,7 +35,7 @@
 			"left_bar center right_bar"
 			"left_bar status_bar right_bar";
 		width: 100%;
-		height: 100%;
+		height: calc(100% - 30px);
 	}
 
 	#tab_bar {
